nullaway_error_2774cb15-bf61-4f2a-b72b-96d795730a0c.txt
Stopping file watching and invalidating VFS after an error happened
/home/nima/Developer/nullness-benchmarks/eureka/eureka-core/src/main/java/com/netflix/eureka/cluster/PeerEurekaNodes.java:115: error: [NullAway] dereferenced expression taskExecutor is @Nullable
        taskExecutor.shutdown();
                    ^
